<resources>

    <string name="app_name">Shopping List</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Shopping List</string>
    <string name="button_add">Add Item</string>
    <string name="button_autoshop">Auto Shop</string>
    <string name="newitem_create">Add</string>
    <string name="newitem_cancel">Cancel</string>
    <string name="newitem_name">Item Name</string>
    <string name="newitem_label_name">Item Name:</string>
    <string name="newitem_label_price">Item Price:</string>
    <string name="newitem_label_quantity">Item Quantity:</string>
    <string name="newitem_priority_high">High Priority</string>
    <string name="newitem_priority_medium">Normal Priority</string>
    <string name="newitem_priority_low">Low Priority</string>
    <string name="newitem_price">$0.00</string>
    <string name="settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="setting_budget">Bank Account:</string>
    <string name="setting_budget_hint">$0.00</string>
    <string name="setting_done">Done</string>
    <string name="newitem_quantity">Quantity</string>

</resources>